--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pancharm</title>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons+Two+Tone"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div id="root"></div>
