--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 			href="https://fonts.googleapis.com/icon?family=Material+Icons+Two+Tone"
 			rel="stylesheet"
 		/>
+
+		<link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css" />
 	</head>
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 		<script src="/src/utils/helper.ts"></script>
+
+		<!-- Start import quill editor -->
+		<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+		<script
+			src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+			crossorigin
+		></script>
+		<script src="https://unpkg.com/react-quill@1.3.3/dist/react-quill.js"></script>
+		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+		<script type="text/babel" src="/my-scripts.js"></script>
+		<!-- End import quill editor -->
 	</body>
 </html>
